# HPRCRedux

./: .gitignore  AutoDownload.sh  CMakeLists.txt  FlashUtils.cpp  I2CUtils.c  I2CUtils.h  ICM46288.c  ICM46288.h  LPS25.c  LPS25.h  compile_commands.json  main.c
src/: I2CUtils.cpp  I2CUtils.h  ICM46288.cpp  ICM46288.h  main.cpp
